@@ -10,5 +10,5 @@
 
 #define public MagickPackageName "GraphicsMagick"
 #define public MagickPackageVersion "1.4"
-#define public MagickPackageVersionAddendum ".020190413"
-#define public MagickPackageReleaseDate "snapshot-20190413"
+#define public MagickPackageVersionAddendum ".020190414"
+#define public MagickPackageReleaseDate "snapshot-20190414"
