@@ -1,3 +1,11 @@
+2019-04-14  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
+
+	* coders/xwd.c (ReadXWDImage): Add more XWD header validation
+	logic.  Addresses problems noted by email from Hongxu Chen to the
+	graphicsmagick-security mail alias on Sun, 14 Apr 2019 and
+	entitled "Multiple crashes (FPE and invalid read) when processing
+	XWD files".
+
 2019-04-13  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
 
 	* coders/pdb.c (WritePDBImage): Assure that input scanline is
